--- a/src/application/RegistroPage.fxml
+++ b/src/application/RegistroPage.fxml
@@ -1,42 +1,110 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane fx:id="bp" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.RegistroClass">
+<BorderPane fx:id="bp" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.RegistroClass">
    <center>
-      <AnchorPane prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #1d334a;" BorderPane.alignment="CENTER">
+      <AnchorPane prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #f6f6f6;" BorderPane.alignment="CENTER">
          <children>
-            <Text fill="#f6f6f6" layoutX="328.0" layoutY="244.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nombre de usuario">
-               <font>
-                  <Font name="Malgun Gothic" size="24.0" />
-               </font>
-            </Text>
-            <Text fill="#f6f6f6" layoutX="328.0" layoutY="301.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Contraseña">
-               <font>
-                  <Font name="Malgun Gothic" size="24.0" />
-               </font>
-            </Text>
-            <TextField fx:id="txtUser" layoutX="660.0" layoutY="221.0" onInputMethodTextChanged="#eventKey" onKeyPressed="#eventKey" onKeyReleased="#eventKey" onKeyTyped="#eventKey" prefHeight="25.0" prefWidth="238.0" />
-            <PasswordField fx:id="txtPass" layoutX="659.0" layoutY="279.0" onInputMethodTextChanged="#eventKey" onKeyPressed="#eventKey" onKeyReleased="#eventKey" onKeyTyped="#eventKey" prefHeight="25.0" prefWidth="240.0" />
-            <Text fill="#f6f6f6" layoutX="328.0" layoutY="377.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Confirma contraseña">
-               <font>
-                  <Font size="24.0" />
-               </font>
-            </Text>
-            <PasswordField fx:id="txtPass2" layoutX="659.0" layoutY="355.0" prefHeight="25.0" prefWidth="241.0" />
-            <Text fx:id="txt" layoutX="665.0" layoutY="463.0" strokeType="OUTSIDE" strokeWidth="0.0">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Text>
-            <Button fx:id="btnLog" layoutX="667.0" layoutY="446.0" mnemonicParsing="false" onAction="#eventAction" prefHeight="57.0" prefWidth="90.0" text="Loggin" />
-            <Button fx:id="btnreg" layoutX="795.0" layoutY="446.0" mnemonicParsing="false" onAction="#eventAction" prefHeight="57.0" prefWidth="97.0" text="Registrar" />
+            <Pane layoutX="280.0" layoutY="83.0" prefHeight="567.0" prefWidth="360.0" style="-fx-background-color: #1d334a;">
+               <children>
+                  <Text fill="#f6f6f6" layoutX="56.0" layoutY="69.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nombre de usuario">
+                     <font>
+                        <Font name="Malgun Gothic" size="20.0" />
+                     </font>
+                  </Text>
+                  <Text fill="#f6f6f6" layoutX="54.0" layoutY="248.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Contraseña">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </Text>
+                  <TextField fx:id="txtUser" layoutX="54.0" layoutY="83.0" onInputMethodTextChanged="#eventKey" onKeyPressed="#eventKey" onKeyReleased="#eventKey" onKeyTyped="#eventKey" prefHeight="40.0" prefWidth="240.0" style="-fx-background-color: #f6f6f6;">
+                     <font>
+                        <Font name="Malgun Gothic" size="20.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="TEXT" />
+                     </cursor></TextField>
+                  <PasswordField fx:id="txtPass" layoutX="54.0" layoutY="262.0" onInputMethodTextChanged="#eventKey" onKeyPressed="#eventKey" onKeyReleased="#eventKey" onKeyTyped="#eventKey" prefHeight="40.0" prefWidth="240.0" style="-fx-background-color: #f6f6f6;">
+                     <font>
+                        <Font name="Malgun Gothic" size="20.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="TEXT" />
+                     </cursor></PasswordField>
+                  <Text fill="#f6f6f6" layoutX="56.0" layoutY="339.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Confirmar contraseña" wrappingWidth="195.931640625">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </Text>
+                  <PasswordField fx:id="txtPass2" layoutX="54.0" layoutY="355.0" prefHeight="40.0" prefWidth="240.0" style="-fx-background-color: #f6f6f6;">
+                     <font>
+                        <Font name="Malgun Gothic" size="20.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="TEXT" />
+                     </cursor></PasswordField>
+                  <Button fx:id="btnreg" layoutX="57.0" layoutY="464.0" mnemonicParsing="false" onAction="#eventAction" prefHeight="60.0" prefWidth="240.0" style="-fx-background-color: #e55137;" text="Registrarse" textFill="#f6f6f6">
+                     <font>
+                        <Font name="Malgun Gothic" size="26.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
+                  <Text fill="#f6f6f6" layoutX="54.0" layoutY="158.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Correo electrónico">
+                     <font>
+                        <Font name="Malgun Gothic" size="20.0" />
+                     </font>
+                  </Text>
+                  <TextField fx:id="txtUser1" layoutX="54.0" layoutY="172.0" onInputMethodTextChanged="#eventKey" onKeyPressed="#eventKey" onKeyReleased="#eventKey" onKeyTyped="#eventKey" prefHeight="40.0" prefWidth="240.0" promptText="ejemplo@mail.com" style="-fx-background-color: #f6f6f6;">
+                     <font>
+                        <Font name="Malgun Gothic" size="20.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="TEXT" />
+                     </cursor>
+                  </TextField>
+                  <Text fx:id="txt" fill="#e55137" layoutX="54.0" layoutY="424.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="241.0">
+                     <font>
+                        <Font name="Malgun Gothic" size="16.0" />
+                     </font>
+                  </Text>
+               </children>
+            </Pane>
+            <Pane layoutX="640.0" layoutY="150.0" prefHeight="420.0" prefWidth="460.0" style="-fx-background-color: #5dc1b9;">
+               <children>
+                  <Button fx:id="btnLog" layoutX="266.0" layoutY="334.0" mnemonicParsing="false" onAction="#eventAction" prefHeight="57.0" prefWidth="161.0" style="-fx-background-color: #5dc1b9;" text="Inicia Sesión." textFill="#f6f6f6">
+                     <font>
+                        <Font name="Malgun Gothic" size="22.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
+                  <ImageView fitHeight="320.0" fitWidth="320.0" layoutX="70.0" layoutY="21.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../images/logo_color.png" />
+                     </image>
+                  </ImageView>
+                  <Text fill="#1d334a" layoutX="41.0" layoutY="372.0" strokeType="OUTSIDE" strokeWidth="0.0" text="¿Ya tienes una cuenta?" wrappingWidth="237.13671875">
+                     <font>
+                        <Font name="Malgun Gothic" size="22.0" />
+                     </font>
+                  </Text>
+               </children>
+            </Pane>
+            <Pane layoutX="180.0" layoutY="150.0" prefHeight="420.0" prefWidth="100.0" style="-fx-background-color: #5dc1b9;" />
          </children>
       </AnchorPane>
    </center>
